src/newcParser.output
Grammar

    0 $accept: program $end

    1 program: declarations_list

    2 declarations_list: declarations_list declaration
    3                  | declaration
    4                  | error

    5 declaration: var_dec
    6            | func_dec

    7 $@1: %empty

    8 $@2: %empty

    9 func_dec: TYPE ID PARENL $@1 params_list PARENR STFUNC $@2 statement_list ENDFUNC

   10 $@3: %empty

   11 $@4: %empty

   12 func_dec: TYPE MAIN PARENL $@3 params_list PARENR STFUNC $@4 statement_list ENDFUNC

   13 params_list: params_list COMMA parameter
   14            | parameter
   15            | %empty
   16            | error

   17 parameter: TYPE ID

   18 statement_list: statement_list statement
   19               | %empty
   20               | error

   21 statement: expression_statement
   22          | ret_st
   23          | var_dec
   24          | io_ops
   25          | basic_ops

   26 expression_statement: expression SEMIC

   27 basic_ops: if_ops
   28          | for_statement STFUNC statement_list ENDFUNC
   29          | forall_statement set_op SEMIC
   30          | forall_statement STFUNC statement_list ENDFUNC

   31 for_statement: FOR PARENL for_body PARENR

   32 forall_statement: FORALL PARENL in_set PARENR

   33 for_body: expression_statement expression_statement expression
   34         | SEMIC expression_statement expression

   35 if_ops: if_statement STFUNC statement_list ENDFUNC
   36       | if_statement STFUNC statement_list ENDFUNC else_statement

   37 if_statement: IF PARENL operation PARENR

   38 $@5: %empty

   39 else_statement: ELSE $@5 STFUNC statement_list ENDFUNC

   40 ret_st: RETURN expression SEMIC

   41 var_dec: TYPE ID SEMIC

   42 io_ops: READ PARENL PARENR SEMIC
   43       | READ PARENL expression PARENR SEMIC
   44       | WRITE PARENL expression PARENR SEMIC
   45       | WRITELN PARENL expression PARENR SEMIC

   46 expression: set_op
   47           | operation
   48           | func_call
   49           | assign_value

   50 term: ID
   51     | INTEGER
   52     | DECIMAL
   53     | CHAR
   54     | STRING
   55     | EMPTY
   56     | PARENL expression PARENR

   57 math_op: term DIV expression
   58        | term MULT expression
   59        | term ADD expression
   60        | term SUB expression
   61        | term

   62 set_op: ADDSET PARENL in_set PARENR
   63       | REMOVE PARENL in_set PARENR
   64       | EXISTS PARENL in_set PARENR

   65 operation: math_op
   66          | in_set
   67          | ISTYPE PARENL expression PARENR
   68          | term SMALLER expression
   69          | term GREATER expression
   70          | term SMALLEQ expression
   71          | term GREATEQ expression
   72          | term EQUALS expression
   73          | term DIFFERENT expression
   74          | term OR expression
   75          | term AND expression
   76          | NEG expression

   77 func_call: ID PARENL args_list PARENR

   78 in_set: term IN expression

   79 args_list: args_list COMMA term
   80          | term
   81          | %empty

   82 assign_value: ID ASSIGN expression


Terminals, with rules where they appear

    $end (0) 0
    error <tree_node> (256) 4 16 20
    ID <str> (258) 9 17 41 50 77 82
    TYPE <str> (259) 9 12 17 41
    STRING <str> (260) 54
    CHAR <str> (261) 53
    EMPTY <str> (262) 55
    MAIN <str> (263) 12
    INTEGER <integer> (264) 51
    DECIMAL <dec> (265) 52
    ADD <str> (266) 59
    SUB <str> (267) 60
    MULT <str> (268) 58
    DIV <str> (269) 57
    OR <str> (270) 74
    AND <str> (271) 75
    SMALLER <str> (272) 68
    GREATER <str> (273) 69
    SMALLEQ <str> (274) 70
    GREATEQ <str> (275) 71
    EQUALS <str> (276) 72
    DIFFERENT <str> (277) 73
    ASSIGN <str> (278) 82
    NEG <str> (279) 76
    IF <str> (280) 37
    ELSE <str> (281) 39
    FOR <str> (282) 31
    READ <str> (283) 42 43
    WRITE <str> (284) 44
    WRITELN <str> (285) 45
    RETURN <str> (286) 40
    IN <str> (287) 78
    ISTYPE <str> (288) 67
    ADDSET <str> (289) 62
    REMOVE <str> (290) 63
    EXISTS <str> (291) 64
    FORALL <str> (292) 32
    COMMA <str> (293) 13 79
    STFUNC <str> (294) 9 12 28 30 35 36 39
    ENDFUNC <str> (295) 9 12 28 30 35 36 39
    PARENL <str> (296) 9 12 31 32 37 42 43 44 45 56 62 63 64 67 77
    PARENR <str> (297) 9 12 31 32 37 42 43 44 45 56 62 63 64 67 77
    SEMIC <str> (298) 26 29 34 40 41 42 43 44 45


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    program <tree_node> (45)
        on left: 1
        on right: 0
    declarations_list <tree_node> (46)
        on left: 2 3 4
        on right: 1 2
    declaration <tree_node> (47)
        on left: 5 6
        on right: 2 3
    func_dec <tree_node> (48)
        on left: 9 12
        on right: 6
    $@1 (49)
        on left: 7
        on right: 9
    $@2 (50)
        on left: 8
        on right: 9
    $@3 (51)
        on left: 10
        on right: 12
    $@4 (52)
        on left: 11
        on right: 12
    params_list <tree_node> (53)
        on left: 13 14 15 16
        on right: 9 12 13
    parameter <tree_node> (54)
        on left: 17
        on right: 13 14
    statement_list <tree_node> (55)
        on left: 18 19 20
        on right: 9 12 18 28 30 35 36 39
    statement <tree_node> (56)
        on left: 21 22 23 24 25
        on right: 18
    expression_statement <tree_node> (57)
        on left: 26
        on right: 21 33 34
    basic_ops <tree_node> (58)
        on left: 27 28 29 30
        on right: 25
    for_statement <tree_node> (59)
        on left: 31
        on right: 28
    forall_statement <tree_node> (60)
        on left: 32
        on right: 29 30
    for_body <tree_node> (61)
        on left: 33 34
        on right: 31
    if_ops <tree_node> (62)
        on left: 35 36
        on right: 27
    if_statement <tree_node> (63)
        on left: 37
        on right: 35 36
    else_statement <tree_node> (64)
        on left: 39
        on right: 36
    $@5 (65)
        on left: 38
        on right: 39
    ret_st <tree_node> (66)
        on left: 40
        on right: 22
    var_dec <tree_node> (67)
        on left: 41
        on right: 5 23
    io_ops <tree_node> (68)
        on left: 42 43 44 45
        on right: 24
    expression <tree_node> (69)
        on left: 46 47 48 49
        on right: 26 33 34 40 43 44 45 56 57 58 59 60 67 68 69 70 71 72 73 74 75 76 78 82
    term <tree_node> (70)
        on left: 50 51 52 53 54 55 56
        on right: 57 58 59 60 61 68 69 70 71 72 73 74 75 78 79 80
    math_op <tree_node> (71)
        on left: 57 58 59 60 61
        on right: 65
    set_op <tree_node> (72)
        on left: 62 63 64
        on right: 29 46
    operation <tree_node> (73)
        on left: 65 66 67 68 69 70 71 72 73 74 75 76
        on right: 37 47
    func_call <tree_node> (74)
        on left: 77
        on right: 48
    in_set <tree_node> (75)
        on left: 78
        on right: 32 62 63 64 66
    args_list <tree_node> (76)
        on left: 79 80 81
        on right: 77 79
    assign_value <tree_node> (77)
        on left: 82
        on right: 49


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    program            go to state 3
    declarations_list  go to state 4
    declaration        go to state 5
    func_dec           go to state 6
    var_dec            go to state 7


State 1

    4 declarations_list: error •

    $end  reduce using rule 4 (declarations_list)
    TYPE  reduce using rule 4 (declarations_list)


State 2

    9 func_dec: TYPE • ID PARENL $@1 params_list PARENR STFUNC $@2 statement_list ENDFUNC
   12         | TYPE • MAIN PARENL $@3 params_list PARENR STFUNC $@4 statement_list ENDFUNC
   41 var_dec: TYPE • ID SEMIC

    ID    shift, and go to state 8
    MAIN  shift, and go to state 9


State 3

    0 $accept: program • $end

    $end  shift, and go to state 10


State 4

    1 program: declarations_list •
    2 declarations_list: declarations_list • declaration

    TYPE  shift, and go to state 2

    $end  reduce using rule 1 (program)

    declaration  go to state 11
    func_dec     go to state 6
    var_dec      go to state 7


State 5

    3 declarations_list: declaration •

    $end  reduce using rule 3 (declarations_list)
    TYPE  reduce using rule 3 (declarations_list)


State 6

    6 declaration: func_dec •

    $end  reduce using rule 6 (declaration)
    TYPE  reduce using rule 6 (declaration)


State 7

    5 declaration: var_dec •

    $end  reduce using rule 5 (declaration)
    TYPE  reduce using rule 5 (declaration)


State 8

    9 func_dec: TYPE ID • PARENL $@1 params_list PARENR STFUNC $@2 statement_list ENDFUNC
   41 var_dec: TYPE ID • SEMIC

    PARENL  shift, and go to state 12
    SEMIC   shift, and go to state 13


State 9

   12 func_dec: TYPE MAIN • PARENL $@3 params_list PARENR STFUNC $@4 statement_list ENDFUNC

    PARENL  shift, and go to state 14


State 10

    0 $accept: program $end •

    $default  accept


State 11

    2 declarations_list: declarations_list declaration •

    $end  reduce using rule 2 (declarations_list)
    TYPE  reduce using rule 2 (declarations_list)


State 12

    9 func_dec: TYPE ID PARENL • $@1 params_list PARENR STFUNC $@2 statement_list ENDFUNC

    error   reduce using rule 7 ($@1)
    TYPE    reduce using rule 7 ($@1)
    COMMA   reduce using rule 7 ($@1)
    PARENR  reduce using rule 7 ($@1)

    $@1  go to state 15


State 13

   41 var_dec: TYPE ID SEMIC •

    $end  reduce using rule 41 (var_dec)
    TYPE  reduce using rule 41 (var_dec)


State 14

   12 func_dec: TYPE MAIN PARENL • $@3 params_list PARENR STFUNC $@4 statement_list ENDFUNC

    error   reduce using rule 10 ($@3)
    TYPE    reduce using rule 10 ($@3)
    COMMA   reduce using rule 10 ($@3)
    PARENR  reduce using rule 10 ($@3)

    $@3  go to state 16


State 15

    9 func_dec: TYPE ID PARENL $@1 • params_list PARENR STFUNC $@2 statement_list ENDFUNC

    error  shift, and go to state 17
    TYPE   shift, and go to state 18

    COMMA   reduce using rule 15 (params_list)
    PARENR  reduce using rule 15 (params_list)

    params_list  go to state 19
    parameter    go to state 20


State 16

   12 func_dec: TYPE MAIN PARENL $@3 • params_list PARENR STFUNC $@4 statement_list ENDFUNC

    error  shift, and go to state 17
    TYPE   shift, and go to state 18

    COMMA   reduce using rule 15 (params_list)
    PARENR  reduce using rule 15 (params_list)

    params_list  go to state 21
    parameter    go to state 20


State 17

   16 params_list: error •

    COMMA   reduce using rule 16 (params_list)
    PARENR  reduce using rule 16 (params_list)


State 18

   17 parameter: TYPE • ID

    ID  shift, and go to state 22


State 19

    9 func_dec: TYPE ID PARENL $@1 params_list • PARENR STFUNC $@2 statement_list ENDFUNC
   13 params_list: params_list • COMMA parameter

    COMMA   shift, and go to state 23
    PARENR  shift, and go to state 24


State 20

   14 params_list: parameter •

    COMMA   reduce using rule 14 (params_list)
    PARENR  reduce using rule 14 (params_list)


State 21

   12 func_dec: TYPE MAIN PARENL $@3 params_list • PARENR STFUNC $@4 statement_list ENDFUNC
   13 params_list: params_list • COMMA parameter

    COMMA   shift, and go to state 23
    PARENR  shift, and go to state 25


State 22

   17 parameter: TYPE ID •

    COMMA   reduce using rule 17 (parameter)
    PARENR  reduce using rule 17 (parameter)


State 23

   13 params_list: params_list COMMA • parameter

    TYPE  shift, and go to state 18

    parameter  go to state 26


State 24

    9 func_dec: TYPE ID PARENL $@1 params_list PARENR • STFUNC $@2 statement_list ENDFUNC

    STFUNC  shift, and go to state 27


State 25

   12 func_dec: TYPE MAIN PARENL $@3 params_list PARENR • STFUNC $@4 statement_list ENDFUNC

    STFUNC  shift, and go to state 28


State 26

   13 params_list: params_list COMMA parameter •

    COMMA   reduce using rule 13 (params_list)
    PARENR  reduce using rule 13 (params_list)


State 27

    9 func_dec: TYPE ID PARENL $@1 params_list PARENR STFUNC • $@2 statement_list ENDFUNC

    error    reduce using rule 8 ($@2)
    ID       reduce using rule 8 ($@2)
    TYPE     reduce using rule 8 ($@2)
    STRING   reduce using rule 8 ($@2)
    CHAR     reduce using rule 8 ($@2)
    EMPTY    reduce using rule 8 ($@2)
    INTEGER  reduce using rule 8 ($@2)
    DECIMAL  reduce using rule 8 ($@2)
    NEG      reduce using rule 8 ($@2)
    IF       reduce using rule 8 ($@2)
    FOR      reduce using rule 8 ($@2)
    READ     reduce using rule 8 ($@2)
    WRITE    reduce using rule 8 ($@2)
    WRITELN  reduce using rule 8 ($@2)
    RETURN   reduce using rule 8 ($@2)
    ISTYPE   reduce using rule 8 ($@2)
    ADDSET   reduce using rule 8 ($@2)
    REMOVE   reduce using rule 8 ($@2)
    EXISTS   reduce using rule 8 ($@2)
    FORALL   reduce using rule 8 ($@2)
    ENDFUNC  reduce using rule 8 ($@2)
    PARENL   reduce using rule 8 ($@2)

    $@2  go to state 29


State 28

   12 func_dec: TYPE MAIN PARENL $@3 params_list PARENR STFUNC • $@4 statement_list ENDFUNC

    error    reduce using rule 11 ($@4)
    ID       reduce using rule 11 ($@4)
    TYPE     reduce using rule 11 ($@4)
    STRING   reduce using rule 11 ($@4)
    CHAR     reduce using rule 11 ($@4)
    EMPTY    reduce using rule 11 ($@4)
    INTEGER  reduce using rule 11 ($@4)
    DECIMAL  reduce using rule 11 ($@4)
    NEG      reduce using rule 11 ($@4)
    IF       reduce using rule 11 ($@4)
    FOR      reduce using rule 11 ($@4)
    READ     reduce using rule 11 ($@4)
    WRITE    reduce using rule 11 ($@4)
    WRITELN  reduce using rule 11 ($@4)
    RETURN   reduce using rule 11 ($@4)
    ISTYPE   reduce using rule 11 ($@4)
    ADDSET   reduce using rule 11 ($@4)
    REMOVE   reduce using rule 11 ($@4)
    EXISTS   reduce using rule 11 ($@4)
    FORALL   reduce using rule 11 ($@4)
    ENDFUNC  reduce using rule 11 ($@4)
    PARENL   reduce using rule 11 ($@4)

    $@4  go to state 30


State 29

    9 func_dec: TYPE ID PARENL $@1 params_list PARENR STFUNC $@2 • statement_list ENDFUNC

    error  shift, and go to state 31

    ID       reduce using rule 19 (statement_list)
    TYPE     reduce using rule 19 (statement_list)
    STRING   reduce using rule 19 (statement_list)
    CHAR     reduce using rule 19 (statement_list)
    EMPTY    reduce using rule 19 (statement_list)
    INTEGER  reduce using rule 19 (statement_list)
    DECIMAL  reduce using rule 19 (statement_list)
    NEG      reduce using rule 19 (statement_list)
    IF       reduce using rule 19 (statement_list)
    FOR      reduce using rule 19 (statement_list)
    READ     reduce using rule 19 (statement_list)
    WRITE    reduce using rule 19 (statement_list)
    WRITELN  reduce using rule 19 (statement_list)
    RETURN   reduce using rule 19 (statement_list)
    ISTYPE   reduce using rule 19 (statement_list)
    ADDSET   reduce using rule 19 (statement_list)
    REMOVE   reduce using rule 19 (statement_list)
    EXISTS   reduce using rule 19 (statement_list)
    FORALL   reduce using rule 19 (statement_list)
    ENDFUNC  reduce using rule 19 (statement_list)
    PARENL   reduce using rule 19 (statement_list)

    statement_list  go to state 32


State 30

   12 func_dec: TYPE MAIN PARENL $@3 params_list PARENR STFUNC $@4 • statement_list ENDFUNC

    error  shift, and go to state 31

    ID       reduce using rule 19 (statement_list)
    TYPE     reduce using rule 19 (statement_list)
    STRING   reduce using rule 19 (statement_list)
    CHAR     reduce using rule 19 (statement_list)
    EMPTY    reduce using rule 19 (statement_list)
    INTEGER  reduce using rule 19 (statement_list)
    DECIMAL  reduce using rule 19 (statement_list)
    NEG      reduce using rule 19 (statement_list)
    IF       reduce using rule 19 (statement_list)
    FOR      reduce using rule 19 (statement_list)
    READ     reduce using rule 19 (statement_list)
    WRITE    reduce using rule 19 (statement_list)
    WRITELN  reduce using rule 19 (statement_list)
    RETURN   reduce using rule 19 (statement_list)
    ISTYPE   reduce using rule 19 (statement_list)
    ADDSET   reduce using rule 19 (statement_list)
    REMOVE   reduce using rule 19 (statement_list)
    EXISTS   reduce using rule 19 (statement_list)
    FORALL   reduce using rule 19 (statement_list)
    ENDFUNC  reduce using rule 19 (statement_list)
    PARENL   reduce using rule 19 (statement_list)

    statement_list  go to state 33


State 31

   20 statement_list: error •

    ID       reduce using rule 20 (statement_list)
    TYPE     reduce using rule 20 (statement_list)
    STRING   reduce using rule 20 (statement_list)
    CHAR     reduce using rule 20 (statement_list)
    EMPTY    reduce using rule 20 (statement_list)
    INTEGER  reduce using rule 20 (statement_list)
    DECIMAL  reduce using rule 20 (statement_list)
    NEG      reduce using rule 20 (statement_list)
    IF       reduce using rule 20 (statement_list)
    FOR      reduce using rule 20 (statement_list)
    READ     reduce using rule 20 (statement_list)
    WRITE    reduce using rule 20 (statement_list)
    WRITELN  reduce using rule 20 (statement_list)
    RETURN   reduce using rule 20 (statement_list)
    ISTYPE   reduce using rule 20 (statement_list)
    ADDSET   reduce using rule 20 (statement_list)
    REMOVE   reduce using rule 20 (statement_list)
    EXISTS   reduce using rule 20 (statement_list)
    FORALL   reduce using rule 20 (statement_list)
    ENDFUNC  reduce using rule 20 (statement_list)
    PARENL   reduce using rule 20 (statement_list)


State 32

    9 func_dec: TYPE ID PARENL $@1 params_list PARENR STFUNC $@2 statement_list • ENDFUNC
   18 statement_list: statement_list • statement

    ID       shift, and go to state 34
    TYPE     shift, and go to state 35
    STRING   shift, and go to state 36
    CHAR     shift, and go to state 37
    EMPTY    shift, and go to state 38
    INTEGER  shift, and go to state 39
    DECIMAL  shift, and go to state 40
    NEG      shift, and go to state 41
    IF       shift, and go to state 42
    FOR      shift, and go to state 43
    READ     shift, and go to state 44
    WRITE    shift, and go to state 45
    WRITELN  shift, and go to state 46
    RETURN   shift, and go to state 47
    ISTYPE   shift, and go to state 48
    ADDSET   shift, and go to state 49
    REMOVE   shift, and go to state 50
    EXISTS   shift, and go to state 51
    FORALL   shift, and go to state 52
    ENDFUNC  shift, and go to state 53
    PARENL   shift, and go to state 54

    statement             go to state 55
    expression_statement  go to state 56
    basic_ops             go to state 57
    for_statement         go to state 58
    forall_statement      go to state 59
    if_ops                go to state 60
    if_statement          go to state 61
    ret_st                go to state 62
    var_dec               go to state 63
    io_ops                go to state 64
    expression            go to state 65
    term                  go to state 66
    math_op               go to state 67
    set_op                go to state 68
    operation             go to state 69
    func_call             go to state 70
    in_set                go to state 71
    assign_value          go to state 72


State 33

   12 func_dec: TYPE MAIN PARENL $@3 params_list PARENR STFUNC $@4 statement_list • ENDFUNC
   18 statement_list: statement_list • statement

    ID       shift, and go to state 34
    TYPE     shift, and go to state 35
    STRING   shift, and go to state 36
    CHAR     shift, and go to state 37
    EMPTY    shift, and go to state 38
    INTEGER  shift, and go to state 39
    DECIMAL  shift, and go to state 40
    NEG      shift, and go to state 41
    IF       shift, and go to state 42
    FOR      shift, and go to state 43
    READ     shift, and go to state 44
    WRITE    shift, and go to state 45
    WRITELN  shift, and go to state 46
    RETURN   shift, and go to state 47
    ISTYPE   shift, and go to state 48
    ADDSET   shift, and go to state 49
    REMOVE   shift, and go to state 50
    EXISTS   shift, and go to state 51
    FORALL   shift, and go to state 52
    ENDFUNC  shift, and go to state 73
    PARENL   shift, and go to state 54

    statement             go to state 55
    expression_statement  go to state 56
    basic_ops             go to state 57
    for_statement         go to state 58
    forall_statement      go to state 59
    if_ops                go to state 60
    if_statement          go to state 61
    ret_st                go to state 62
    var_dec               go to state 63
    io_ops                go to state 64
    expression            go to state 65
    term                  go to state 66
    math_op               go to state 67
    set_op                go to state 68
    operation             go to state 69
    func_call             go to state 70
    in_set                go to state 71
    assign_value          go to state 72


State 34

   50 term: ID •
   77 func_call: ID • PARENL args_list PARENR
   82 assign_value: ID • ASSIGN expression

    ASSIGN  shift, and go to state 74
    PARENL  shift, and go to state 75

    ADD        reduce using rule 50 (term)
    SUB        reduce using rule 50 (term)
    MULT       reduce using rule 50 (term)
    DIV        reduce using rule 50 (term)
    OR         reduce using rule 50 (term)
    AND        reduce using rule 50 (term)
    SMALLER    reduce using rule 50 (term)
    GREATER    reduce using rule 50 (term)
    SMALLEQ    reduce using rule 50 (term)
    GREATEQ    reduce using rule 50 (term)
    EQUALS     reduce using rule 50 (term)
    DIFFERENT  reduce using rule 50 (term)
    IN         reduce using rule 50 (term)
    SEMIC      reduce using rule 50 (term)


State 35

   41 var_dec: TYPE • ID SEMIC

    ID  shift, and go to state 76


State 36

   54 term: STRING •

    ADD        reduce using rule 54 (term)
    SUB        reduce using rule 54 (term)
    MULT       reduce using rule 54 (term)
    DIV        reduce using rule 54 (term)
    OR         reduce using rule 54 (term)
    AND        reduce using rule 54 (term)
    SMALLER    reduce using rule 54 (term)
    GREATER    reduce using rule 54 (term)
    SMALLEQ    reduce using rule 54 (term)
    GREATEQ    reduce using rule 54 (term)
    EQUALS     reduce using rule 54 (term)
    DIFFERENT  reduce using rule 54 (term)
    IN         reduce using rule 54 (term)
    SEMIC      reduce using rule 54 (term)


State 37

   53 term: CHAR •

    ADD        reduce using rule 53 (term)
    SUB        reduce using rule 53 (term)
    MULT       reduce using rule 53 (term)
    DIV        reduce using rule 53 (term)
    OR         reduce using rule 53 (term)
    AND        reduce using rule 53 (term)
    SMALLER    reduce using rule 53 (term)
    GREATER    reduce using rule 53 (term)
    SMALLEQ    reduce using rule 53 (term)
    GREATEQ    reduce using rule 53 (term)
    EQUALS     reduce using rule 53 (term)
    DIFFERENT  reduce using rule 53 (term)
    IN         reduce using rule 53 (term)
    SEMIC      reduce using rule 53 (term)


State 38

   55 term: EMPTY •

    ADD        reduce using rule 55 (term)
    SUB        reduce using rule 55 (term)
    MULT       reduce using rule 55 (term)
    DIV        reduce using rule 55 (term)
    OR         reduce using rule 55 (term)
    AND        reduce using rule 55 (term)
    SMALLER    reduce using rule 55 (term)
    GREATER    reduce using rule 55 (term)
    SMALLEQ    reduce using rule 55 (term)
    GREATEQ    reduce using rule 55 (term)
    EQUALS     reduce using rule 55 (term)
    DIFFERENT  reduce using rule 55 (term)
    IN         reduce using rule 55 (term)
    SEMIC      reduce using rule 55 (term)


State 39

   51 term: INTEGER •

    ADD        reduce using rule 51 (term)
    SUB        reduce using rule 51 (term)
    MULT       reduce using rule 51 (term)
    DIV        reduce using rule 51 (term)
    OR         reduce using rule 51 (term)
    AND        reduce using rule 51 (term)
    SMALLER    reduce using rule 51 (term)
    GREATER    reduce using rule 51 (term)
    SMALLEQ    reduce using rule 51 (term)
    GREATEQ    reduce using rule 51 (term)
    EQUALS     reduce using rule 51 (term)
    DIFFERENT  reduce using rule 51 (term)
    IN         reduce using rule 51 (term)
    SEMIC      reduce using rule 51 (term)


State 40

   52 term: DECIMAL •

    ADD        reduce using rule 52 (term)
    SUB        reduce using rule 52 (term)
    MULT       reduce using rule 52 (term)
    DIV        reduce using rule 52 (term)
    OR         reduce using rule 52 (term)
    AND        reduce using rule 52 (term)
    SMALLER    reduce using rule 52 (term)
    GREATER    reduce using rule 52 (term)
    SMALLEQ    reduce using rule 52 (term)
    GREATEQ    reduce using rule 52 (term)
    EQUALS     reduce using rule 52 (term)
    DIFFERENT  reduce using rule 52 (term)
    IN         reduce using rule 52 (term)
    SEMIC      reduce using rule 52 (term)


State 41

   76 operation: NEG • expression

    ID       shift, and go to state 34
    STRING   shift, and go to state 36
    CHAR     shift, and go to state 37
    EMPTY    shift, and go to state 38
    INTEGER  shift, and go to state 39
    DECIMAL  shift, and go to state 40
    NEG      shift, and go to state 41
    ISTYPE   shift, and go to state 48
    ADDSET   shift, and go to state 49
    REMOVE   shift, and go to state 50
    EXISTS   shift, and go to state 51
    PARENL   shift, and go to state 54

    expression    go to state 77
    term          go to state 66
    math_op       go to state 67
    set_op        go to state 68
    operation     go to state 69
    func_call     go to state 70
    in_set        go to state 71
    assign_value  go to state 72


State 42

   37 if_statement: IF • PARENL operation PARENR

    PARENL  shift, and go to state 78


State 43

   31 for_statement: FOR • PARENL for_body PARENR

    PARENL  shift, and go to state 79


State 44

   42 io_ops: READ • PARENL PARENR SEMIC
   43       | READ • PARENL expression PARENR SEMIC

    PARENL  shift, and go to state 80


State 45

   44 io_ops: WRITE • PARENL expression PARENR SEMIC

    PARENL  shift, and go to state 81


State 46

   45 io_ops: WRITELN • PARENL expression PARENR SEMIC

    PARENL  shift, and go to state 82


State 47

   40 ret_st: RETURN • expression SEMIC

    ID       shift, and go to state 34
    STRING   shift, and go to state 36
    CHAR     shift, and go to state 37
    EMPTY    shift, and go to state 38
    INTEGER  shift, and go to state 39
    DECIMAL  shift, and go to state 40
    NEG      shift, and go to state 41
    ISTYPE   shift, and go to state 48
    ADDSET   shift, and go to state 49
    REMOVE   shift, and go to state 50
    EXISTS   shift, and go to state 51
    PARENL   shift, and go to state 54

    expression    go to state 83
    term          go to state 66
    math_op       go to state 67
    set_op        go to state 68
    operation     go to state 69
    func_call     go to state 70
    in_set        go to state 71
    assign_value  go to state 72


State 48

   67 operation: ISTYPE • PARENL expression PARENR

    PARENL  shift, and go to state 84


State 49

   62 set_op: ADDSET • PARENL in_set PARENR

    PARENL  shift, and go to state 85


State 50

   63 set_op: REMOVE • PARENL in_set PARENR

    PARENL  shift, and go to state 86


State 51

   64 set_op: EXISTS • PARENL in_set PARENR

    PARENL  shift, and go to state 87


State 52

   32 forall_statement: FORALL • PARENL in_set PARENR

    PARENL  shift, and go to state 88


State 53

    9 func_dec: TYPE ID PARENL $@1 params_list PARENR STFUNC $@2 statement_list ENDFUNC •

    $end  reduce using rule 9 (func_dec)
    TYPE  reduce using rule 9 (func_dec)


State 54

   56 term: PARENL • expression PARENR

    ID       shift, and go to state 175
    STRING   shift, and go to state 176
    CHAR     shift, and go to state 177
    EMPTY    shift, and go to state 178
    INTEGER  shift, and go to state 179
    DECIMAL  shift, and go to state 180
    NEG      shift, and go to state 181
    ISTYPE   shift, and go to state 182
    ADDSET   shift, and go to state 183
    REMOVE   shift, and go to state 184
    EXISTS   shift, and go to state 185
    PARENL   shift, and go to state 186

    expression    go to state 89
    term          go to state 187
    math_op       go to state 188
    set_op        go to state 189
    operation     go to state 190
    func_call     go to state 191
    in_set        go to state 192
    assign_value  go to state 193


State 55

   18 statement_list: statement_list statement •

    ID       reduce using rule 18 (statement_list)
    TYPE     reduce using rule 18 (statement_list)
    STRING   reduce using rule 18 (statement_list)
    CHAR     reduce using rule 18 (statement_list)
    EMPTY    reduce using rule 18 (statement_list)
    INTEGER  reduce using rule 18 (statement_list)
    DECIMAL  reduce using rule 18 (statement_list)
    NEG      reduce using rule 18 (statement_list)
    IF       reduce using rule 18 (statement_list)
    FOR      reduce using rule 18 (statement_list)
    READ     reduce using rule 18 (statement_list)
    WRITE    reduce using rule 18 (statement_list)
    WRITELN  reduce using rule 18 (statement_list)
    RETURN   reduce using rule 18 (statement_list)
    ISTYPE   reduce using rule 18 (statement_list)
    ADDSET   reduce using rule 18 (statement_list)
    REMOVE   reduce using rule 18 (statement_list)
    EXISTS   reduce using rule 18 (statement_list)
    FORALL   reduce using rule 18 (statement_list)
    ENDFUNC  reduce using rule 18 (statement_list)
    PARENL   reduce using rule 18 (statement_list)


State 56

   21 statement: expression_statement •

    ID       reduce using rule 21 (statement)
    TYPE     reduce using rule 21 (statement)
    STRING   reduce using rule 21 (statement)
    CHAR     reduce using rule 21 (statement)
    EMPTY    reduce using rule 21 (statement)
    INTEGER  reduce using rule 21 (statement)
    DECIMAL  reduce using rule 21 (statement)
    NEG      reduce using rule 21 (statement)
    IF       reduce using rule 21 (statement)
    FOR      reduce using rule 21 (statement)
    READ     reduce using rule 21 (statement)
    WRITE    reduce using rule 21 (statement)
    WRITELN  reduce using rule 21 (statement)
    RETURN   reduce using rule 21 (statement)
    ISTYPE   reduce using rule 21 (statement)
    ADDSET   reduce using rule 21 (statement)
    REMOVE   reduce using rule 21 (statement)
    EXISTS   reduce using rule 21 (statement)
    FORALL   reduce using rule 21 (statement)
    ENDFUNC  reduce using rule 21 (statement)
    PARENL   reduce using rule 21 (statement)


State 57

   25 statement: basic_ops •

    ID       reduce using rule 25 (statement)
    TYPE     reduce using rule 25 (statement)
    STRING   reduce using rule 25 (statement)
    CHAR     reduce using rule 25 (statement)
    EMPTY    reduce using rule 25 (statement)
    INTEGER  reduce using rule 25 (statement)
    DECIMAL  reduce using rule 25 (statement)
    NEG      reduce using rule 25 (statement)
    IF       reduce using rule 25 (statement)
    FOR      reduce using rule 25 (statement)
    READ     reduce using rule 25 (statement)
    WRITE    reduce using rule 25 (statement)
    WRITELN  reduce using rule 25 (statement)
    RETURN   reduce using rule 25 (statement)
    ISTYPE   reduce using rule 25 (statement)
    ADDSET   reduce using rule 25 (statement)
    REMOVE   reduce using rule 25 (statement)
    EXISTS   reduce using rule 25 (statement)
    FORALL   reduce using rule 25 (statement)
    ENDFUNC  reduce using rule 25 (statement)
    PARENL   reduce using rule 25 (statement)


State 58

   28 basic_ops: for_statement • STFUNC statement_list ENDFUNC

    STFUNC  shift, and go to state 90


State 59

   29 basic_ops: forall_statement • set_op SEMIC
   30          | forall_statement • STFUNC statement_list ENDFUNC

    ADDSET  shift, and go to state 49
    REMOVE  shift, and go to state 50
    EXISTS  shift, and go to state 51
    STFUNC  shift, and go to state 91

    set_op  go to state 92


State 60

   27 basic_ops: if_ops •

    ID       reduce using rule 27 (basic_ops)
    TYPE     reduce using rule 27 (basic_ops)
    STRING   reduce using rule 27 (basic_ops)
    CHAR     reduce using rule 27 (basic_ops)
    EMPTY    reduce using rule 27 (basic_ops)
    INTEGER  reduce using rule 27 (basic_ops)
    DECIMAL  reduce using rule 27 (basic_ops)
    NEG      reduce using rule 27 (basic_ops)
    IF       reduce using rule 27 (basic_ops)
    FOR      reduce using rule 27 (basic_ops)
    READ     reduce using rule 27 (basic_ops)
    WRITE    reduce using rule 27 (basic_ops)
    WRITELN  reduce using rule 27 (basic_ops)
    RETURN   reduce using rule 27 (basic_ops)
    ISTYPE   reduce using rule 27 (basic_ops)
    ADDSET   reduce using rule 27 (basic_ops)
    REMOVE   reduce using rule 27 (basic_ops)
    EXISTS   reduce using rule 27 (basic_ops)
    FORALL   reduce using rule 27 (basic_ops)
    ENDFUNC  reduce using rule 27 (basic_ops)
    PARENL   reduce using rule 27 (basic_ops)


State 61

   35 if_ops: if_statement • STFUNC statement_list ENDFUNC
   36       | if_statement • STFUNC statement_list ENDFUNC else_statement

    STFUNC  shift, and go to state 93


State 62

   22 statement: ret_st •
